kubernetes/tools/07-02-ingress-pma-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pma-ingress
  namespace: tools
  annotations:
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-pma
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: www-pma.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: pma-service
          servicePort: 9000
